--- a/Crowd_Funding_Platform/Views/Account/Login.cshtml
+++ b/Crowd_Funding_Platform/Views/Account/Login.cshtml
@@ -107,9 +107,9 @@
                                                    class="btn btn-social btn-google btn-block font-small-3 mr-md-1 mb-md-0 mb-1">
                                                     <i class="bx bxl-google font-medium-3"></i><span class="pl-50 d-block text-center">Google</span>
                                                 </a>
-                                                <a href="javascript:void(0);" class="btn btn-social btn-block mt-0 btn-facebook font-small-3">
+                                                @* <a href="javascript:void(0);" class="btn btn-social btn-block mt-0 btn-facebook font-small-3">
                                                     <i class="bx bxl-facebook-square font-medium-3"></i><span class="pl-50 d-block text-center">Facebook</span>
-                                                </a>
+                                                </a> *@
                                             </div>
                                             <div class="divider">
                                                 <div class="divider-text text-uppercase text-muted">
