--- a/Crowd_Funding_Platform/Views/Admin/AuditLogs.cshtml
+++ b/Crowd_Funding_Platform/Views/Admin/AuditLogs.cshtml
@@ -4,14 +4,13 @@
     ViewData["Title"] = "Audit Logs";
     Layout = "~/Views/Shared/_dashboardLayout.cshtml";
 }
-<div class="form-check form-switch mb-3">
+@* <div class="form-check form-switch mb-3">
     <input class="form-check-input" type="checkbox" id="roleToggle"
     @(ViewBag.ViewAs == "creator" ? "checked" : "") onchange="onRoleToggle(this.checked)">
     <label class="form-check-label" for="roleToggle">
-        @* View as <span id="roleLabel">@(ViewBag.ViewAs == "creator" ? "Creator" : "Admin")</span> *@
         View as <span id="roleLabel">@(ViewBag.ViewAs == "creator" ? "Admin" : "Creator")</span>
     </label>
-</div>
+</div> *@
 
 
 @functions {
